Added a 'make run'. and added current directory to classpath.

--- a/parser/Makefile
+++ b/parser/Makefile
@@ -1,6 +1,6 @@
 FILES=Evil.java
 
-export CLASSPATH=CLASSPATH:./antlr-3.3-complete.jar
+export CLASSPATH=CLASSPATH:.:./antlr-3.3-complete.jar
 
 Evil.class : antlr.generated ${FILES}
 	javac *.java
@@ -24,3 +24,5 @@ clean:
 	rm -v *tokens
 	rm -v antlr.generated*
 
+run:
+	java Evil
